# YOLOv8

./: .gitignore  README.md  main.py  pyproject.toml
